src/grammar_testing/test_grammar.txt
Program → StatementList


StatementList → Statement StatementList
              | ε


Statement → AssignmentStatement
          | IfStatement
          | WhileStatement
          | PrintStatement
          | FunctionDeclaration


AssignmentStatement → IDENTIFIER "=" Expression


IfStatement → "if" "(" Expression ")" "{" StatementList "}" ElseClause


ElseClause → "else" "{" StatementList "}"
           | ε


WhileStatement → "while" "(" Expression ")" "{" StatementList "}"


PrintStatement → "print" "(" Expression ")"


FunctionDeclaration → "function" IDENTIFIER "(" ParameterList ")"
                      "{" StatementList ReturnStatement "}"


ParameterList → IDENTIFIER "," ParameterList
              | IDENTIFIER
              | ε


ReturnStatement → "return" Expression
                | ε


// Note, this grammar is ambiguous, but this shall be solved using SLY precedence rules
Expression → Expression EqualityOperation Expression
           | Expression AdditionOperation Expression
           | Expression MultiplicationOperation Expression
           | UnaryOperation Expression
           | "(" Expression ")"
           | IDENTIFIER
           | INTEGER
           | FLOAT
           | STRING
           | BOOLEAN

EqualityOperation → "=="
                  | "!="
                  | "==."
                  | "!=."

AdditionOperation → "+"
                  | "-"
                  | "+."
                  | "-."
                  | "++"

MultiplicationOperation → "*"
                        | "/"
                        | "*."
                        | "/."

UnaryOperation → "-"
               | "-."
